# ChessPi

./: AI.cpp  AI.h  Bishop.cpp  Bishop.h  Board.cpp  Board.h  CMakeLists.txt  ChessPiece.cpp  ChessPiece.h  King.cpp  King.h  Knight.cpp  Knight.h  LCDScreen.cpp  LCDScreen.h  LEDMatrix.cpp  LEDMatrix.h  Makefile  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  README.txt  ReedMatrix.cpp  ReedMatrix.h  ReedSwitchTest.cpp  Rook.cpp  Rook.h  Square.cpp  Square.h  a.out  chess_pi  driver.cpp  main.cpp  ph.cpp  practice.cpp  readArduino.cpp  test.cpp
